Changed from mysql to sqlite3

--- a/Showdown_GUI.ipynb
+++ b/Showdown_GUI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "from tkinter import *\n",
     "#from PIL import ImageTk, Image\n",
     "\n",
-    "import MySQLdb"
+    "import sqlite3"
    ]
   },
   {
@@ -23,27 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SELECT * FROM pokemon_profiles.Charizard\n",
-      "SELECT * FROM pokemon_profiles.Rillaboom\n",
-      "SELECT * FROM pokemon_profiles.Rillaboom WHERE (move1=%s OR move2=%s OR move3=%s OR move4=%s)\n",
-      "SELECT * FROM pokemon_profiles.Rillaboom WHERE (move1=%s OR move2=%s OR move3=%s OR move4=%s) AND (move1=%s OR move2=%s OR move3=%s OR move4=%s)\n",
-      "SELECT * FROM pokemon_profiles.Raichu\n",
-      "SELECT * FROM pokemon_profiles.Porygon2\n"
+      "SELECT * FROM Rillaboom\n"
      ]
     }
    ],
    "source": [
-    "usr = \"showdownroot\"\n",
-    "pwd = \"pikachuate100ketchups\"\n",
-    "database = \"pokemon_profiles\"\n",
-    "connection = MySQLdb.connect(host=\"localhost\", user = usr, passwd = pwd, db = database)\n",
+    "connection = sqlite3.connect(\"pokemon_profiles.db\")\n",
     "\n",
     "cursor = connection.cursor()\n",
     "\n",
@@ -54,7 +46,7 @@
     "def makeFormatString(poke_name, ability_name, item_name):\n",
     "    #I should check the poke_name against table names in database or else ill get sql injected problem here, granted the consequences are small but lets be honest it also probably isnt\n",
     "    #put in a validate statement like if(validate(poke_name))\n",
-    "    format_string = 'SELECT * FROM pokemon_profiles.' + poke_name \n",
+    "    format_string = 'SELECT * FROM ' + poke_name \n",
     "    format_tuple = ()\n",
     "    \n",
     "    move_one = move1_field.get()\n",
