--- a/database_updater.ipynb
+++ b/database_updater.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import MySQLdb\n",
-    "import os"
+    "#import MySQLdb\n",
+    "import os\n",
+    "import sqlite3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -771,13 +772,7 @@
       "Rillaboom\n",
       "GameProfile000107\n",
       "Lapras\n",
-      "Marowak-Alola\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Marowak-Alola\n",
       "Rillaboom\n",
       "Porygon2\n",
       "Urshifu-*\n",
@@ -818,7 +813,13 @@
       "Cinderace\n",
       "Grimmsnarl\n",
       "GameProfile000113\n",
-      "Porygon-Z\n",
+      "Porygon-Z\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Grimmsnarl\n",
       "Lapras\n",
       "Braviary\n",
@@ -1523,13 +1524,7 @@
       "Hatterene\n",
       "Indeedee-F\n",
       "Gyarados\n",
-      "Cinderace\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Cinderace\n",
       "GameProfile000214\n",
       "Escavalier\n",
       "Rillaboom\n",
@@ -1781,7 +1776,13 @@
       "Arcanine\n",
       "Indeedee\n",
       "GameProfile000250\n",
-      "Eiscue\n",
+      "Eiscue\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Amoonguss\n",
       "Cinderace\n",
       "Primarina\n",
@@ -2278,13 +2279,7 @@
       "Duraludon\n",
       "Milotic\n",
       "GameProfile000321\n",
-      "Primarina\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Primarina\n",
       "Clefairy\n",
       "Ferrothorn\n",
       "Urshifu-*\n",
@@ -2355,10 +2350,11 @@
     }
    ],
    "source": [
-    "usr = \"showdownroot\"\n",
-    "pwd = \"pikachuate100ketchups\"\n",
-    "database = \"pokemon_profiles\"\n",
-    "connection = MySQLdb.connect(host=\"localhost\", user = usr, passwd = pwd, db = database)\n",
+    "#usr = \"showdownroot\"\n",
+    "#pwd = \"pikachuate100ketchups\"\n",
+    "#database = \"pokemon_profiles\"\n",
+    "#connection = MySQLdb.connect(host=\"localhost\", user = usr, passwd = pwd, db = database)\n",
+    "connection = sqlite3.connect(\"pokemon_profiles.db\")\n",
     "\n",
     "cursor = connection.cursor()\n",
     "\n",
@@ -2374,8 +2370,8 @@
     "print(full_path)\n",
     "\n",
     "#This should be a prepared statement (cursor.execute(sql_statement, (param1, param2))) but i supply parameters so it should be fine\n",
-    "table_sql_statement = \"CREATE TABLE IF NOT EXISTS {table_name} (pokemon_id int PRIMARY KEY AUTO_INCREMENT,ability varchar(32) DEFAULT 'UNKNOWN', item varchar(32) DEFAULT 'UNKNOWN', move1 varchar(32) DEFAULT 'UNKNOWN',move2 varchar(32) DEFAULT 'UNKNOWN',move3 varchar(32) DEFAULT 'UNKNOWN',move4 varchar(32) DEFAULT 'UNKNOWN',maxmove1 varchar(32) DEFAULT 'UNKNOWN',maxmove2 varchar(32) DEFAULT 'UNKNOWN',maxmove3 varchar(32) DEFAULT 'UNKNOWN',maxmove4 varchar(32) DEFAULT 'UNKNOWN');\"\n",
-    "cur\n",
+    "table_sql_statement = \"CREATE TABLE IF NOT EXISTS {table_name} (pokemon_id INTEGER PRIMARY KEY AUTOINCREMENT,ability varchar(32) DEFAULT 'UNKNOWN', item varchar(32) DEFAULT 'UNKNOWN', move1 varchar(32) DEFAULT 'UNKNOWN',move2 varchar(32) DEFAULT 'UNKNOWN',move3 varchar(32) DEFAULT 'UNKNOWN',move4 varchar(32) DEFAULT 'UNKNOWN',maxmove1 varchar(32) DEFAULT 'UNKNOWN',maxmove2 varchar(32) DEFAULT 'UNKNOWN',maxmove3 varchar(32) DEFAULT 'UNKNOWN',maxmove4 varchar(32) DEFAULT 'UNKNOWN');\"\n",
+    "\n",
     "\n",
     "start = 0\n",
     "for filename in os.listdir(full_path):\n",
@@ -2457,6 +2453,7 @@
     "    \n",
     "        if(len(move_list) > 0):\n",
     "            cursor.execute(format_string)\n",
+    "            connection.commit()\n",
     "        \n",
     "        start += 9 - (move_num + maxmove_num - 2)\n",
     "\n",
