--- a/Showdown_GUI.ipynb
+++ b/Showdown_GUI.ipynb
@@ -10,7 +10,7 @@
     "from tkinter import *\n",
     "#from PIL import ImageTk, Image\n",
     "\n",
-    "import MySQLdb"
+    "import sqlite3"
    ]
   },
   {
@@ -23,27 +23,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SELECT * FROM pokemon_profiles.Charizard\n",
-      "SELECT * FROM pokemon_profiles.Rillaboom\n",
-      "SELECT * FROM pokemon_profiles.Rillaboom WHERE (move1=%s OR move2=%s OR move3=%s OR move4=%s)\n",
-      "SELECT * FROM pokemon_profiles.Rillaboom WHERE (move1=%s OR move2=%s OR move3=%s OR move4=%s) AND (move1=%s OR move2=%s OR move3=%s OR move4=%s)\n",
-      "SELECT * FROM pokemon_profiles.Raichu\n",
-      "SELECT * FROM pokemon_profiles.Porygon2\n"
+     "ename": "TclError",
+     "evalue": "no display name and no $DISPLAY environment variable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTclError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-dcc7edeafd6a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mcursor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconnection\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mwindow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mwindow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtitle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Showdown Project\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3.8/tkinter/__init__.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, screenName, baseName, className, useTk, sync, use)\u001b[0m\n\u001b[1;32m   2259\u001b[0m                 \u001b[0mbaseName\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbaseName\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2260\u001b[0m         \u001b[0minteractive\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2261\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_tkinter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscreenName\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbaseName\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclassName\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minteractive\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwantobjects\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0museTk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msync\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2262\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0museTk\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2263\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_loadtk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTclError\u001b[0m: no display name and no $DISPLAY environment variable"
      ]
     }
    ],
    "source": [
-    "usr = \"showdownroot\"\n",
-    "pwd = \"pikachuate100ketchups\"\n",
-    "database = \"pokemon_profiles\"\n",
-    "connection = MySQLdb.connect(host=\"localhost\", user = usr, passwd = pwd, db = database)\n",
+    "connection = sqlite3.connect(\"pokemon_profiles.db\")\n",
     "\n",
     "cursor = connection.cursor()\n",
     "\n",
@@ -51,83 +48,55 @@
     "\n",
     "window.title(\"Showdown Project\")\n",
     "\n",
-    "def makeFormatString(poke_name, ability_name, item_name):\n",
+    "def makeFormatString():\n",
     "    #I should check the poke_name against table names in database or else ill get sql injected problem here, granted the consequences are small but lets be honest it also probably isnt\n",
     "    #put in a validate statement like if(validate(poke_name))\n",
-    "    format_string = 'SELECT * FROM pokemon_profiles.' + poke_name \n",
+    "    \n",
+    "    poke_name = poke_name_field.get()\n",
+    "    ability_name = ability_name_field.get()\n",
+    "    item_name = item_name_field.get()\n",
+    "    \n",
+    "    format_string = 'SELECT * FROM ' + poke_name \n",
     "    format_tuple = ()\n",
     "    \n",
-    "    move_one = move1_field.get()\n",
-    "    while(True):\n",
-    "        if move_one == \"Move\":\n",
-    "            break\n",
-    "        format_string = format_string + ' WHERE (move1=%s OR move2=%s OR move3=%s OR move4=%s)'\n",
-    "        format_tuple = format_tuple + (move_one, move_one, move_one, move_one)\n",
-    "        \n",
-    "        move_two = move2_field.get()\n",
-    "        if move_two == \"Move\":\n",
-    "            break\n",
-    "        format_string = format_string + ' AND (move1=%s OR move2=%s OR move3=%s OR move4=%s)'\n",
-    "        format_tuple = format_tuple + (move_two, move_two, move_two, move_two)\n",
+    "    where = False\n",
     "    \n",
-    "        move_three = move3_field.get()\n",
-    "        if move_three == \"Move\":\n",
-    "            break\n",
-    "        format_string = format_string + ' AND (move1=%s OR move2=%s OR move3=%s OR move4=%s)'\n",
-    "        format_tuple = format_tuple + (move_three, move_three, move_three, move_three)\n",
+    "    for i in range(4):\n",
+    "        move = move_fields[i].get()\n",
+    "        if move != \"Move\":\n",
+    "            if where:\n",
+    "                format_string += ' AND (move1=? OR move2=? OR move3=? OR move4=?)'\n",
+    "            else:\n",
+    "                format_string += ' WHERE (move1=? OR move2=? OR move3=? OR move4=?)'\n",
+    "                where = True\n",
+    "            format_tuple += (move, move, move, move)\n",
     "    \n",
-    "        move_four = move4_field.get()\n",
-    "        if move_four == \"Move\":\n",
-    "            break\n",
-    "        format_string = format_string + ' AND (move1=%s OR move2=%s OR move3=%s OR move4=%s)'\n",
-    "        format_tuple = format_tuple + (move_four, move_four, move_four, move_four)\n",
-    "        break\n",
-    "    \n",
-    "    while(True):\n",
-    "        maxmove_one = maxmove1_field.get()\n",
-    "        if maxmove_one == \"Max Move\":\n",
-    "            break\n",
-    "        elif move_one == \"Move\":\n",
-    "            format_string = format_string + ' WHERE (maxmove1=%s OR maxmove2=%s OR maxmove3=%s OR maxmove4=%s)'\n",
-    "            format_tuple = format_tuple + (maxmove_one, maxmove_one, maxmove_one, maxmove_one)\n",
-    "        else:\n",
-    "            format_string = format_string + ' AND (maxmove1=%s OR maxmove2=%s OR maxmove3=%s OR maxmove4=%s)'\n",
-    "            format_tuple = format_tuple + (maxmove_one, maxmove_one, maxmove_one, maxmove_one)\n",
-    "    \n",
-    "        maxmove_two = move2_field.get()\n",
-    "        if maxmove_two == \"Max Move\":\n",
-    "            break\n",
-    "        format_string = format_string + ' AND (maxmove1=%s OR maxmove2=%s OR maxmove3=%s OR maxmove4=%s)'\n",
-    "        format_tuple = format_tuple + (maxmove_two, maxmove_two, maxmove_two, maxmove_two)\n",
-    "    \n",
-    "        maxmove_three = move3_field.get()\n",
-    "        if maxmove_three == \"Max Move\":\n",
-    "            break\n",
-    "        format_string = format_string + ' AND (maxmove1=%s OR maxmove2=%s OR maxmove3=%s OR maxmove4=%s)'\n",
-    "        format_tuple = format_tuple + (maxmove_three, maxmove_three, maxmove_three, maxmove_three)\n",
-    "    \n",
-    "        maxmove_four = maxmove4_field.get()\n",
-    "        if maxmove_four == \"Max Move\":\n",
-    "            break\n",
-    "        format_string = format_string + ' AND (maxmove1=%s OR maxmove2=%s OR maxmove3=%s OR maxmove4=%s)'\n",
-    "        format_tuple = format_tuple + (maxmove_four, maxmove_four, maxmove_four, maxmove_four)\n",
-    "        break\n",
-    "    \n",
+    "    for i in range(4, 8):\n",
+    "        move = move_fields[i].get()\n",
+    "        if move != \"Max Move\":\n",
+    "            if where:\n",
+    "                format_string += ' AND (maxmove1=? OR maxmove2=? OR maxmove3=? OR maxmove4=?)'\n",
+    "            else:\n",
+    "                format_string += ' WHERE (maxmove1=? OR maxmove2=? OR maxmove3=? OR maxmove4=?)'\n",
+    "                where = True\n",
+    "            format_tuple += (move, move, move, move)\n",
+    "                \n",
     "    if ability_name != \"Ability\":\n",
-    "        if move_one == \"Move\" and maxmove_one == \"Max Move\": \n",
-    "            format_string = format_string + ' WHERE ability=%s'\n",
-    "            format_tuple = format_tuple + (ability_name,)\n",
+    "        if where: \n",
+    "            format_string += ' AND ability=?'\n",
     "        else:\n",
-    "            format_string = format_string + ' AND ability=%s'\n",
-    "            format_tuple = format_tuple + (ability_name,)\n",
+    "            format_string += ' WHERE ability=?'\n",
+    "            where = True\n",
+    "        format_tuple += (ability_name,)\n",
     "        \n",
     "    if item_name != \"Item\":\n",
-    "        if move_one == \"Move\" and maxmove_one == \"Max Move\" and ability_name==\"Ability\": \n",
-    "            format_string = format_string + ' WHERE item=%s'\n",
-    "            format_tuple = format_tuple + (item_name,)\n",
+    "        if where: \n",
+    "            format_string += ' AND item=?'\n",
     "        else:\n",
-    "            format_string = format_string + ' AND item=%s'\n",
-    "            format_tuple = format_tuple + (item_name,)\n",
+    "            format_string += ' WHERE item=?'\n",
+    "            where = True\n",
+    "        format_tuple += (item_name,)\n",
+    "    \n",
     "    \n",
     "    return format_string, format_tuple\n",
     "\n",
@@ -145,12 +114,10 @@
     "        maxfreq_lbl[i].configure(text=\"\")\n",
     "\n",
     "def update_known():\n",
-    "    poke_name = poke_name_field.get()\n",
-    "    ability_name = ability_name_field.get()\n",
-    "    item_name = item_name_field.get()\n",
     "    \n",
-    "    format_string, format_tuple = makeFormatString(poke_name, ability_name, item_name)\n",
+    "    format_string, format_tuple = makeFormatString()\n",
     "    print(format_string)\n",
+    "    print(format_tuple)\n",
     "    cursor.execute(format_string, format_tuple)\n",
     "    \n",
     "    total = 0\n",
@@ -160,56 +127,20 @@
     "    item_freq = {}\n",
     "    for (num_id, ability, item, move1, move2, move3, move4, maxmove1, maxmove2, maxmove3, maxmove4) in cursor:\n",
     "        total += 1\n",
-    "        if ability in ability_freq:\n",
-    "            ability_freq[ability] += 1\n",
-    "        else:\n",
-    "            ability_freq[ability] = 1\n",
-    "            \n",
-    "        if item in item_freq:\n",
-    "            item_freq[item] += 1\n",
-    "        else:\n",
-    "            item_freq[item] = 1\n",
-    "            \n",
-    "        if move1 in move_freq:\n",
-    "            move_freq[move1] += 1\n",
-    "        else:\n",
-    "            move_freq[move1] = 1\n",
     "        \n",
-    "        if move2 in move_freq:\n",
-    "            move_freq[move2] += 1\n",
-    "        else:\n",
-    "            move_freq[move2] = 1\n",
-    "            \n",
-    "        if move3 in move_freq:\n",
-    "            move_freq[move3] += 1\n",
-    "        else:\n",
-    "            move_freq[move3] = 1\n",
-    "            \n",
-    "        if move4 in move_freq:\n",
-    "            move_freq[move4] += 1\n",
-    "        else:\n",
-    "            move_freq[move4] = 1\n",
-    "            \n",
-    "        if maxmove1 in maxmove_freq:\n",
-    "            maxmove_freq[maxmove1] += 1\n",
-    "        else:\n",
-    "            maxmove_freq[maxmove1] = 1\n",
+    "        update_freq(ability_freq, ability)\n",
+    "        update_freq(item_freq, item)\n",
     "        \n",
-    "        if maxmove2 in maxmove_freq:\n",
-    "            maxmove_freq[maxmove2] += 1\n",
-    "        else:\n",
-    "            maxmove_freq[maxmove2] = 1\n",
-    "            \n",
-    "        if maxmove3 in maxmove_freq:\n",
-    "            maxmove_freq[maxmove3] += 1\n",
-    "        else:\n",
-    "            maxmove_freq[maxmove3] = 1\n",
-    "            \n",
-    "        if maxmove4 in maxmove_freq:\n",
-    "            maxmove_freq[maxmove4] += 1\n",
-    "        else:\n",
-    "            maxmove_freq[maxmove4] = 1\n",
-    "    \n",
+    "        update_freq(move_freq, move1)\n",
+    "        update_freq(move_freq, move2)\n",
+    "        update_freq(move_freq, move3)\n",
+    "        update_freq(move_freq, move4)\n",
+    "        \n",
+    "        update_freq(maxmove_freq, maxmove1)\n",
+    "        update_freq(maxmove_freq, maxmove2)\n",
+    "        update_freq(maxmove_freq, maxmove3)\n",
+    "        update_freq(maxmove_freq, maxmove4)\n",
+    "        \n",
     "    clearFreqLabels()\n",
     "    if \"UNKNOWN\" in ability_freq.keys():\n",
     "        ability_freq.pop(\"UNKNOWN\")\n",
@@ -222,33 +153,37 @@
     "    \n",
     "    for i in range(min(4, len(ability_freq))):\n",
     "        key, value = max(ability_freq.items(), key=lambda x:x[1])\n",
-    "        format_string = \"{ability_name} : {usage} / {num_poke} ({fraction:.2f})\"\n",
+    "        format_string = \"{ability_name:14.14s} \\t{fraction:.2f} ({usage} / {num_poke})\"\n",
     "        format_string = format_string.format(ability_name=key, usage=value, num_poke=total, fraction=value/float(total))\n",
     "        ability_lbl[i].configure(text=format_string)\n",
     "        ability_freq.pop(key)\n",
-    "                   \n",
+    "                  \n",
     "    for i in range(min(4, len(item_freq))):\n",
     "        key, value = max(item_freq.items(), key=lambda x:x[1])\n",
-    "        format_string = \"{item_name} : {usage} / {num_poke} ({fraction:.2f})\"\n",
+    "        format_string = \"{item_name:14.14s} \\t{fraction:.2f} ({usage} / {num_poke})\"\n",
     "        format_string = format_string.format(item_name=key, usage=value, num_poke=total, fraction=value/float(total))\n",
     "        item_lbl[i].configure(text=format_string)\n",
     "        item_freq.pop(key)\n",
     "    \n",
     "    for i in range(min(8, len(move_freq))):\n",
     "        key, value = max(move_freq.items(), key=lambda x:x[1])\n",
-    "        format_string = \"{move_name} : {usage} / {num_poke} ({fraction:.2f})\"\n",
+    "        format_string = \"{move_name:14.14s} \\t{fraction:.2f} ({usage} / {num_poke})\"\n",
     "        format_string = format_string.format(move_name=key, usage=value, num_poke=total, fraction=value/float(total))\n",
     "        freq_lbl[i].configure(text=format_string)\n",
     "        move_freq.pop(key)\n",
     "    \n",
     "    for i in range(min(8, len(maxmove_freq))):\n",
     "        key, value = max(maxmove_freq.items(), key=lambda x:x[1])\n",
-    "        format_string = \"{move_name} : {usage} / {num_poke} ({fraction:.2f})\"\n",
+    "        format_string = \"{move_name:14.14s} \\t{fraction:.2f} ({usage} / {num_poke})\"\n",
     "        format_string = format_string.format(move_name=key, usage=value, num_poke=total, fraction=value/float(total))\n",
     "        maxfreq_lbl[i].configure(text=format_string)\n",
     "        maxmove_freq.pop(key)\n",
     "    \n",
-    "    \n",
+    "def update_freq(freq, key):\n",
+    "    if key in freq:\n",
+    "        freq[key] += 1\n",
+    "    else:\n",
+    "        freq[key] = 1\n",
     "\n",
     "ability_lbl = []\n",
     "for i in range(4):\n",
@@ -283,38 +218,26 @@
     "item_name_field = tk.Entry(window, textvariable=item_name)\n",
     "item_name_field.grid(row=2, column=0)\n",
     "\n",
-    "move1 = StringVar(window, value=\"Move\")\n",
-    "move1_field = tk.Entry(window, textvariable=move1)\n",
-    "move1_field.grid(row=3, column=0)\n",
     "\n",
-    "move2 = StringVar(window, value=\"Move\")\n",
-    "move2_field = tk.Entry(window, textvariable=move2)\n",
-    "move2_field.grid(row=4, column=0)\n",
     "\n",
-    "move3 = StringVar(window, value=\"Move\")\n",
-    "move3_field = tk.Entry(window, textvariable=move3)\n",
-    "move3_field.grid(row=5, column=0)\n",
     "\n",
-    "move4 = StringVar(window, value=\"Move\")\n",
-    "move4_field = tk.Entry(window, textvariable=move4)\n",
-    "move4_field.grid(row=6, column=0)\n",
     "\n",
-    "maxmove1 = StringVar(window, value=\"Max Move\")\n",
-    "maxmove1_field = tk.Entry(window, textvariable=maxmove1)\n",
-    "maxmove1_field.grid(row=7, column=0)\n",
+    "move_fields = []\n",
     "\n",
-    "maxmove2 = StringVar(window, value=\"Max Move\")\n",
-    "maxmove2_field = tk.Entry(window, textvariable=maxmove2)\n",
-    "maxmove2_field.grid(row=8, column=0)\n",
+    "for i in range(4):\n",
+    "    move = StringVar(window, value=\"Move\")\n",
+    "    field = tk.Entry(window, textvariable=move)\n",
+    "    field.grid(row=3 + i, column=0)\n",
+    "    \n",
+    "    move_fields.append(field)\n",
     "\n",
-    "maxmove3 = StringVar(window, value=\"Max Move\")\n",
-    "maxmove3_field = tk.Entry(window, textvariable=maxmove3)\n",
-    "maxmove3_field.grid(row=9, column=0)\n",
-    "\n",
-    "maxmove4 = StringVar(window, value=\"Max Move\")\n",
-    "maxmove4_field = tk.Entry(window, textvariable=maxmove4)\n",
-    "maxmove4_field.grid(row=10, column=0)\n",
-    "\n",
+    "for i in range(4):\n",
+    "    maxmove = StringVar(window, value=\"Max Move\")\n",
+    "    field = tk.Entry(window, textvariable=maxmove)\n",
+    "    field.grid(row=7 + i, column=0)\n",
+    "    \n",
+    "    move_fields.append(field)\n",
+    "    \n",
     "update_btn = tk.Button(window, text=\"Update Info\", command=update_known)\n",
     "update_btn.grid(row=0, column=1)\n",
     "\n",
@@ -357,15 +280,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SELECT * FROM pokemon_profiles.Gyarados WHERE (move1=%s OR move2=%s OR move3=%s OR move4=%s)\n",
-      "('Protect', 'Protect', 'Protect', 'Protect')\n"
+      "SELECT * FROM pokemon_profiles.Gyarados WHERE (move1=%s OR move2=%s OR move3=%s OR move4=%s) AND (move1=%s OR move2=%s OR move3=%s OR move4=%s)\n",
+      "('Protect', 'Protect', 'Protect', 'Protect', 'Thrash', 'Thrash', 'Thrash', 'Thrash')\n"
      ]
     }
    ],
@@ -517,6 +440,13 @@
     "result = ability.split(\"ability: \")[1]\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -535,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
